# EmbeddedLinuxLabs

Lab_01/Assignment_01/: CMakeLists.txt  LOG_UNIT_CONV.elf  main.c  run.sh
Lab_01/Assignment_01/TEMP/: CMakeLists.txt
Lab_01/Assignment_01/TEMP/inc/: temp.h
Lab_01/Assignment_01/TEMP/src/: temp.c
Lab_01/Assignment_01/logs/: temp.sh
Lab_01/Task_01/: pressure.sh
